--- a/Trabalho Ordenação - ED 2/makefile
+++ b/Trabalho Ordenação - ED 2/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -g
 EXEC = programa
-SRCS = main.c BolhaCParada.c BolhaSemParada.c
+SRCS = main.c BolhaCParada.c BolhaSemParada.c BinaryInsertionsort.c Bucketsort.c Heapsort.c Insertionsort.c Mergesort.c Quicksort.c Radixsort.c Selectionsort.c Shellsort.c
 OBJS = $(SRCS:.c=.o)
 
 all: $(EXEC)
